[metadata]
name = niceplotlib
version = attr: niceplotlib.__version__
author = Erin Grant
url = "https://github.com/eringrant/niceplotlib"
description = "Mods to `matplotlib` to make it play nicely with LaTeX documents." 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    niceplotlib

python_requires = >=3.10
install_requires =
    pandas>=1.4.2
    jupyter
    ipython
    pylint
    invoke
    joblib
    black
    nb_black
    pre-commit
